<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:textSize="45sp"
        android:id="@+id/play"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficultyName"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/play"/>

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:textSize="40sp"
        android:id="@+id/normal"
        android:layout_gravity="start"
        android:layout_marginTop="5dp" />


        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random"
        android:textSize="40sp"
        android:id="@+id/random"
        android:layout_gravity="start"
        android:layout_marginTop="5dp"/>
    </RadioGroup>

</RelativeLayout>