<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scene"
        android:layout_gravity="center_horizontal">

    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play_again"
        android:id="@+id/replay"
        android:textSize="45sp"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back_menu"
        android:textSize="25sp"
        android:id="@+id/back"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moves"
        android:id="@+id/moveName"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/moveCounter"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/moveName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/timeName"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeCounter"
        android:textSize="25sp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/timeName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>